Fix overlay-issues with header on smaller screens

--- a/src/main/resources/assets/css/override.css
+++ b/src/main/resources/assets/css/override.css
@@ -249,6 +249,7 @@ header.navbar .nav > li.in-path > a:hover {
 	}
 	.p_article-show .header-image {
 		margin-bottom: 2rem;
+		max-width: 100%;
 	}
 	.p_article-show .published {
 		padding-top: 20px;
